--- a/InstaKiloNew/Base.lproj/Main.storyboard
+++ b/InstaKiloNew/Base.lproj/Main.storyboard
@@ -1,26 +1,121 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XyT-2d-ebi">
+    <device id="retina5_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Collection View Controller-->
+        <scene sceneID="yz8-yU-sHZ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController id="PKe-I6-3Ia" customClass="CollectionViewController" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aHY-DG-Wqg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" red="0.277323921319797" green="0.19647437701125217" blue="0.20952823647342969" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="yi8-e4-Io6">
+                            <size key="itemSize" width="194" height="194"/>
+                            <size key="headerReferenceSize" width="50" height="37"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="lGj-mM-Vfs" customClass="CollectionViewCell">
+                                <rect key="frame" x="0.0" y="37" width="194" height="194"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="194" height="194"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yad-dc-Utn">
+                                            <rect key="frame" x="13" y="13" width="168" height="168"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" red="0.98432682808971461" green="0.99492999747555522" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="yad-dc-Utn" firstAttribute="leading" secondItem="lGj-mM-Vfs" secondAttribute="leadingMargin" constant="5" id="YW7-In-wQq"/>
+                                    <constraint firstItem="yad-dc-Utn" firstAttribute="top" secondItem="lGj-mM-Vfs" secondAttribute="topMargin" constant="5" id="fvt-QS-3qA"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="yad-dc-Utn" secondAttribute="bottom" constant="5" id="hSQ-Lf-5Sf"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="yad-dc-Utn" secondAttribute="trailing" constant="5" id="iDT-aS-eCF"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="yad-dc-Utn" id="72E-OV-mZ5"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionView" id="ffr-DD-08o" customClass="CollectionReusableView">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="37"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GBs-ta-6CI">
+                                    <rect key="frame" x="8" y="0.0" width="398" height="37"/>
+                                    <fontDescription key="fontDescription" type="system" weight="black" pointSize="20"/>
+                                    <color key="textColor" red="1" green="0.99998795986175537" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <color key="backgroundColor" red="1" green="0.99998795986175537" blue="1" alpha="0.31600492294520549" colorSpace="custom" customColorSpace="displayP3"/>
+                            <constraints>
+                                <constraint firstItem="GBs-ta-6CI" firstAttribute="leading" secondItem="ffr-DD-08o" secondAttribute="leadingMargin" id="7gn-EQ-LQU"/>
+                                <constraint firstItem="GBs-ta-6CI" firstAttribute="top" secondItem="ffr-DD-08o" secondAttribute="topMargin" constant="-8" id="SOR-RC-yej"/>
+                                <constraint firstAttribute="bottomMargin" secondItem="GBs-ta-6CI" secondAttribute="bottom" constant="-8" id="e04-fk-daO"/>
+                                <constraint firstItem="GBs-ta-6CI" firstAttribute="trailing" secondItem="ffr-DD-08o" secondAttribute="trailingMargin" id="k03-Kr-k7G"/>
+                            </constraints>
+                            <connections>
+                                <outlet property="sectionLabel" destination="GBs-ta-6CI" id="n7H-zo-aFr"/>
+                            </connections>
+                        </collectionReusableView>
+                        <connections>
+                            <outlet property="dataSource" destination="PKe-I6-3Ia" id="caT-wH-gtR"/>
+                            <outlet property="delegate" destination="PKe-I6-3Ia" id="zOd-BX-CVT"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="QsM-bP-0f7">
+                        <nil key="title"/>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="UgG-NR-XR1">
+                            <rect key="frame" x="124.5" y="7" width="165" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <segments>
+                                <segment title="Subject"/>
+                                <segment title="Location"/>
+                            </segments>
+                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <connections>
+                                <action selector="subjectLocationButton:" destination="PKe-I6-3Ia" eventType="valueChanged" id="l1t-16-aRh"/>
+                            </connections>
+                        </segmentedControl>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="subjectLocation" destination="UgG-NR-XR1" id="KJ4-3b-fCP"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="x7d-2p-SkE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="594" y="46"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4ER-el-gy8">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XyT-2d-ebi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GT2-Jd-8oP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="PKe-I6-3Ia" kind="relationship" relationship="rootViewController" id="kBh-3F-gAl"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4jU-MU-48H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-172" y="47"/>
         </scene>
     </scenes>
 </document>
